I don't know if there are any diffrences with this

--- a/JoJo_Battle_Chicken_Tendency/engine.cfg
+++ b/JoJo_Battle_Chicken_Tendency/engine.cfg
@@ -6,6 +6,15 @@ icon="res://icon.png"
 
 [input]
 
-Player1_Left=[]
-Player1_Right=[]
-Player1_Taunt=[jbutton(0, 12), key(Up)]
+Player1_Jump=[key(G)]
+Player2_Left=[key(J)]
+Player2_Right=[key(L)]
+Player2_Jump=[key(BracketRight)]
+Player2_Taunt=[key(P)]
+Player1_Taunt=[jbutton(0, 12), key(Q)]
+Player1_Down=[key(S)]
+Player2_Up=[key(I)]
+Player2_Down=[key(K)]
+Player1_Up=[key(W)]
+Player1_Right=[key(D)]
+Player1_Left=[key(A)]
