--- a/JoJo_Battle_Chicken_Tendency/engine.cfg
+++ b/JoJo_Battle_Chicken_Tendency/engine.cfg
@@ -4,17 +4,33 @@ name="JoJo_Battle_Chicken_Tendency"
 main_scene="res://Scences/Main.tscn"
 icon="res://icon.png"
 
+[display]
+
+width=1024
+height=600
+
 [input]
 
+Player1_A=[jbutton(0, 0)]
+Player2_B=[jbutton(1, 2)]
+Player1_Trigger_Left=[jaxis(0, 13)]
+Player1_Trigger_Right=[jaxis(0, 15)]
+Player2_Trigger_Right=[jaxis(1, 15)]
+Player2_Trigger_Left=[jaxis(1, 13)]
+Player1_B=[jbutton(0, 2)]
+Player1_Left=[key(V)]
+Player1_Up=[key(QuoteLeft)]
+Player1_Right=[key(N)]
+Player2_Down=[key(Down)]
+Player2_Up=[key(Up)]
+Player1_Down=[key(B)]
+Player1_Taunt=[jbutton(0, 12)]
+Player2_Taunt=[]
+Player2_Jump=[key(Up)]
+Player2_Right=[key(Right)]
+Player2_Left=[key(Left)]
 Player1_Jump=[key(G)]
-Player2_Left=[key(J)]
-Player2_Right=[key(L)]
-Player2_Jump=[key(BracketRight)]
-Player2_Taunt=[key(P)]
-Player1_Taunt=[jbutton(0, 12), key(Q)]
-Player1_Down=[key(S)]
-Player2_Up=[key(I)]
-Player2_Down=[key(K)]
-Player1_Up=[key(W)]
-Player1_Right=[key(D)]
-Player1_Left=[key(A)]
+Player1_C_Up=[key(W)]
+Player1_C_Down=[key(S)]
+Player1_C_Left=[key(A)]
+Player1_C_Right=[key(D)]
