--- a/JoJo_Battle_Chicken_Tendency/engine.cfg
+++ b/JoJo_Battle_Chicken_Tendency/engine.cfg
@@ -1,16 +1,30 @@
 [application]
 
 name="JoJo_Battle_Chicken_Tendency"
-main_scene="res://Scences/Main.tscn"
+main_scene="res://Scences/Main Menu.tscn"
 icon="res://icon.png"
+
+[autoload]
+
+Global="*res://Scripts/Global.gd"
 
 [display]
 
-width=1024
-height=600
+width=1280
+height=720
+use_vsync=true
+
+[image_loader]
+
+filter=false
+gen_mipmaps=false
 
 [input]
 
+Player1_Taunt_Up=[jbutton(0, 12)]
+Player1_Taunt_Down=[jbutton(0, 13)]
+Player2_Taunt_Down=[jbutton(1, 13)]
+Player2_Taunt_Up=[jbutton(1, 12)]
 Player1_A=[jbutton(0, 0)]
 Player2_B=[jbutton(1, 2)]
 Player1_Trigger_Left=[jaxis(0, 13)]
